# Project-RSI

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/backend/: index.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
